testsuite/tests/safeHaskell/flags/SafeFlags26.stderr

SafeFlags26.hs:1:16: warning: [-Wsafe]
    ‘SafeFlags26’ has been inferred as safe!

<no location info>: error: 
Failing due to -Werror.
